@@ -2,38 +2,37 @@
 #
 # A helper for setting up the cross-system connectivity parts of a mount
 #
+# **This should NOT be called from outside ``nfs::client::mount``**
+#
+# All parameters map to their counterparts in ``nfs::client::mount``
+#
 # @param nfs_server
-#   The NFS server to which you will be connecting
-#
-#   * If you are the server, please make sure that this is ``127.0.0.1``
-#
 # @param nfs_version
-#   The NFS version that you want to use
-#
 # @param nfs_port
-#   The NFS port to which to connect
-#
 # @param v4_remote_port
-#   If using NFSv4, the remote port to which to connect
+# @param stunnel
+# @param stunnel_systemd_deps
+# @param stunnel_wantedby
 #
 # @author Trevor Vaughan <tvaughan@onyxpoint.com>
 #
 define nfs::client::mount::connection (
   Simplib::Host           $nfs_server,
   Enum['nfs','nfs4']      $nfs_version,
-  Simplib::Port           $nfs_port       = 2049,
-  Optional[Simplib::Port] $v4_remote_port = undef,
+  Simplib::Port           $nfs_port             = 2049,
+  Optional[Simplib::Port] $v4_remote_port       = undef,
+  Optional[Boolean]       $stunnel              = undef,
   Boolean                 $stunnel_systemd_deps = true,
   Array[String]           $stunnel_wantedby     = []
 ) {
+
+  # This is only meant to be called from inside nfs::client::mount
   assert_private()
 
-  include '::nfs::client'
-
   # Take our best shot at getting this right...
-  # If this doesn't work, you'll need to disable ``nfs::client::stunnel`` for
-  # this host explicitly
-  if $::nfs::client::stunnel and !host_is_me($nfs_server) {
+  # If this doesn't work, you'll need to set ``stunnel`` to ``false`` in your
+  # call to ``nfs::client::mount``
+  if $stunnel {
     if $nfs_version == 'nfs' {
       # This is not great but the target is actually only able to be called
       # once anyway
